cards load correctly now
add filmstrip back, fix a bunch of layout problems

fix styling of drop-downs

search is working, search selection not

got sorting working

top pagination

got the search box working properly finally

separate stylesheets

--- a/css/filmstrip.styl
+++ b/css/filmstrip.styl
@@ -1,8 +1,9 @@
 .filmstrip
 	padding: 0
-	max-width: 1240px
-	margin: 0 -25px
 	display: flex
+	margin-bottom: 1.5em
+	max-width: 1200px
+	margin: 0 auto
 
 .filmstrip__nav-btn
 	border: 0
